--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-get-random-values": "^1.7.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
-    "twrnc": "^2.2.0"
+    "twrnc": "^2.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
